update some async await issue fix
